Fix Bug 1692539: Implementing dark background on hover for all panels
1) Updated background to #333941
2) Deleted the extra padding for the first child from the Locales tab

--- a/frontend/src/core/term/components/Term.css
+++ b/frontend/src/core/term/components/Term.css
@@ -9,7 +9,7 @@
 }
 
 .terms-list .term:not(.cannot-copy):hover {
-    background: #272a2f;
+    background: #333941;
     border-color: #5e6475;
 }
 
